--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -1,5 +1,12 @@
 .input{
 	background-color: var(--tg-theme-secondary-bg-color);
-	color: var(--tg-theme-text-color);
+	color: var(--tg-theme-text-color)
 }
 
+.form-control:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: #212529;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem var(--tg-theme-bg-color);
+}
