--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -4,7 +4,9 @@
 }
 
 .form-control:focus {
+    color: var(--tg-theme-text-color);
+    background-color: var(--tg-theme-secondary-bg-color);
     border-color: #212529;
     outline: 0;
-    box-shadow: 0 0 0 0.25rem var(--tg-theme-bg-color);
+    box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
 }
