--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -1,3 +1,7 @@
+.reg{
+	margin-top: 1rem!important;
+}
+
 .input{
 	background-color: var(--tg-theme-secondary-bg-color);
 	color: var(--tg-theme-text-color)
