--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -3,13 +3,14 @@
 }
 
 .input{
-	background-color: var(--tg-theme-secondary-bg-color);
-	color: var(--tg-theme-text-color)
+	background-color: var(--tg-theme-bg-color);
+	color: var(--tg-theme-text-color);
+    margin-top: 1rem;
 }
 
 .form-control:focus {
     color: var(--tg-theme-text-color);
-    background-color: var(--tg-theme-secondary-bg-color);
+    background-color: var(--tg-theme-bg-color);
     border-color: #212529;
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
