--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -15,3 +15,8 @@
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
 }
+
+.suggestion {
+    background-color: var(--tg-theme-bg-color);;
+	color: var(--tg-theme-text-color);
+}
