--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -1,5 +1,7 @@
 .reg{
 	margin-top: 1rem!important;
+    padding: 0 2rem;
+    border-color: var(--tg-theme-bg-color);
 }
 
 .input{
@@ -18,5 +20,4 @@
 
 .suggestion {
     background-color: var(--tg-theme-bg-color);;
-	color: var(--tg-theme-text-color);
 }
