--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -6,6 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	background-color: var(--tg-theme-bg-color);
 	width: 150px;
 	height: 250px;
 	border: 2px solid var(--primary-color);
