--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -1,10 +1,7 @@
 .list{
+	background: var(--tg-theme-secondary-bg-color);
+	color: var(--tg-theme-text-color);
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-}
-
-.item{
-	margin-right: 1rem;
-	margin-bottom: 1rem;
 }
