--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -9,20 +9,20 @@
 	background-color: var(--tg-theme-bg-color);
 	width: 150px;
 	height: 250px;
-	border: 2px solid var(--primary-color);
-	padding: 0.5rem 0.3rem;
+	border: none;
 	margin: 13px 10px;
 	position: relative;
 	border-radius: 5px;
 }
 
 .card__title {
-	font-weight: 400;
+	font-weight: bold;
+	font-size: medium;
 	text-align: center;
 }
 
 .card__title .card__price {
-	font-weight: bold;
+	font-weight: lighter;
 }
 
 .image__container {
@@ -33,50 +33,27 @@
 
 .image__container img {
 	width: 100%;
+	height: 100%;
 	object-fit: cover;
-	border-radius: 10%;
 }
 
 .btn-container {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-between;
+	height: 35px;
+}
+
+.btn-container .counter{
+	font-size: 14px;
+	line-height: 20px;
+	margin-top: 9px;
 }
 
 .card__price {
 	text-align: center;
+	font-size: 24px;
+	line-height: 24px;
+	font-weight: 600;
 	display: inline-block;
-}
-
-.card__badge {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 40px;
-	height: 40px;
-	background-color: rgb(227, 112, 30);
-	border-radius: 50%;
-	transform: translate(20px, -20px) scale(1);
-	color: #fff;
-	font-weight: bold;
-	text-align: center;
-	border: 2px solid rgb(227, 112, 30);
-	font-size: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: all 0.3s ease;
-	animation: scaleanimation 1s ease infinite;
-	opacity: 0.8;
-}
-
-@keyframes scaleanimation {
-	to {
-		transform: translate(20px, -20px) scale(1.05);
-		opacity: 1;
-	}
-}
-
-.card__badge--hidden {
-	display: none;
 }
