--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -5,17 +5,33 @@
 
 .input{
 	background-color: var(--tg-theme-bg-color);
-    border-color: var(--tg-theme-bg-color);
+    border: 1px, solid var(--tg-theme-bg-color);
 	color: var(--tg-theme-text-color);
     margin-top: 1rem;
+    border-radius: 4px;
+    box-sizing: border-box;
+    display: block;
+    font-size: 16px;
+    height: 38px;
+    outline: none;
+    padding: 0 10px;
+    width: 100%;
 }
 
-.form-control:focus {
+.input:focus {
     color: var(--tg-theme-text-color);
     background-color: var(--tg-theme-bg-color);
     border-color: #212529;
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
+}
+
+.input .valid {
+    border-color: green;
+}
+
+.invalid {
+    border-color: red;
 }
 
 .suggestion {
