--- a/src/components/registrationForm/registrationForm.css
+++ b/src/components/registrationForm/registrationForm.css
@@ -5,7 +5,7 @@
 
 .input{
 	background-color: var(--tg-theme-bg-color);
-    border: 1px, solid var(--tg-theme-bg-color);
+    border: 1px solid var(--tg-theme-bg-color);
 	color: var(--tg-theme-text-color);
     margin-top: 1rem;
     border-radius: 4px;
@@ -26,12 +26,12 @@
     box-shadow: 0 0 0 0.25rem rgba(0, 0, 0, 0.25);
 }
 
-.input .valid {
-    border-color: green;
+.input.valid {
+    border: 1px solid green;
 }
 
-.input .invalid {
-    border-color: red;
+.input.invalid {
+    border: 1px solid red;
 }
 
 .suggestion {
