--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -5,7 +5,8 @@
 	cursor: pointer;
 	background-color: #324AB2;
 	color: white;
-	width: 35px;
+	width: 30px;
+	height: 30px;
 	border-radius: 50%;
 	background-repeat: no-repeat;
 	background-position: center;
