--- a/src/components/cartListItem/cartListItem.css
+++ b/src/components/cartListItem/cartListItem.css
@@ -51,7 +51,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	padding: 1px 1px;
+	padding-right: 10px;
 	width: 100px;
 }
 
