--- a/src/components/cartList/cartList.css
+++ b/src/components/cartList/cartList.css
@@ -6,3 +6,9 @@
 	flex-direction: column;
 	align-items: center;
 }
+
+.cart-header{
+	display: flex;
+	justify-content: left;
+	padding: 5px 5px;
+}
