--- a/src/components/aboutProduct/aboutProduct.css
+++ b/src/components/aboutProduct/aboutProduct.css
@@ -14,6 +14,8 @@
 .product-card__container{
 	display: flex;
 	flex-direction: column;
+	background-color: var(--tg-theme-bg-color);
+	border-radius: 10%;
 	padding: 5px 5px;
 }
 
@@ -38,7 +40,7 @@
 }
 
 .product-card__container .description__container .description {
-	text-align: left;
+	text-align: center;
 	font-size: 15px;
 }
 
