--- a/src/components/aboutProduct/aboutProduct.css
+++ b/src/components/aboutProduct/aboutProduct.css
@@ -4,6 +4,7 @@
 	flex-direction: column;
 	background: var(--tg-theme-secondary-bg-color);
 	color: var(--tg-theme-text-color);
+	padding: 5px 5px;
 }
 
 .product-card .product-card__header{
@@ -15,7 +16,7 @@
 	display: flex;
 	flex-direction: column;
 	background-color: var(--tg-theme-bg-color);
-	border-radius: 10%;
+	border-radius: 10px;
 	padding: 5px 5px;
 }
 
@@ -42,6 +43,12 @@
 .product-card__container .description__container .description {
 	text-align: center;
 	font-size: 15px;
+}
+
+.product-card .product-card__footer{
+	background: var(--tg-theme-secondary-bg-color);
+	position: sticky;
+	bottom: 0;
 }
 
 .product-card .product-card__footer .btn-container{
