--- a/src/components/aboutProduct/aboutProduct.css
+++ b/src/components/aboutProduct/aboutProduct.css
@@ -47,6 +47,8 @@
 
 .product-card .product-card__footer{
 	background: var(--tg-theme-secondary-bg-color);
+	border-radius: 5px;
+	padding: 1px 0;
 	position: sticky;
 	bottom: 0;
 }
