--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -2,13 +2,13 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	background-color: var(--tg-theme-bg-color);
 	width: 150px;
 	height: 250px;
 	border: none;
 	margin: 13px 10px;
 	position: relative;
 	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 18px;
 }
 
 .card__title {
@@ -41,14 +41,14 @@ a{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	height: 35px;
-	padding: 0 5px;
+	border-radius: 30px;
+	margin-bottom: 5px;
 }
 
 .btn-container .counter{
 	font-size: 14px;
 	line-height: 20px;
-	margin-top: 9px;
+	margin: 5px 5px;
 }
 
 .card__price {
