--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,12 +1,14 @@
 .btn{
-	border: 0;
-	outline: none;
-	cursor: pointer;
-	color: white;
-	width: 30px;
-	height: 30px;
+	display: flex;
+	width: 36px;
+	height: 36px;
+	-webkit-box-align: center;
+	justify-content: center;
+	border: none;
+	transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 	border-radius: 50%;
-	background-repeat: no-repeat;
+	padding: 4px;
+	background: no-repeat;
 	background-position: center;
 }
 
@@ -28,14 +30,14 @@
 	background-color: #F28500;
 }
 
-.btn.cart{
+.btn .cart{
 	background-image: url('../../../public/img/cart-icon.png');
 	border-radius: 25px;
 	width: 55px;
 	background-size: 25px;
 }
 
-.btn.back{
+.btn .back{
 	background-image: url('../../../public/img/back.png');
 	border-radius: 25px;
 	width: 55px;
