--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -7,9 +7,10 @@
 	border: none;
 	transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 	border-radius: 50%;
-	padding: 4px;
+	padding: 6px;
 	background: no-repeat;
 	background-position: center;
+	position: relative;
 }
 
 .btn.big-add {
@@ -30,8 +31,9 @@
 	background-color: #F28500;
 }
 
-.btn .cart{
+.btn.cart{
 	background-image: url('../../../public/img/cart-icon.png');
+	background-color: #08E8DE;
 	border-radius: 25px;
 	width: 55px;
 	background-size: 25px;
