--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -1,13 +1,12 @@
-.list {
-	box-sizing: border-box;
-    display: flex;
-    flex: 0 1 auto;
-    flex-flow: row wrap;
-	position: relative;
-}
-
-.list-header {
+.list-header{
 	display: flex;
 	justify-content: flex-end;
 	padding: 5px;
+}
+
+.list-wrapper .list {
+	display: flex;
+	justify-content: center;
+	flex-flow: row wrap;
+	position: relative;
 }
