--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 120px;
+    width: 120px;
     height: 220px; 
     box-shadow: rgb(0 0 0 / 5%) 0px 4px 18px;
     background: white;
@@ -11,15 +11,19 @@
     overflow: hidden;
 }
 
+.active.product-card-image__container{
+	margin: 0 auto;
+	height: 100px;
+	padding-top: 10px;
+}
+
 .product-card-image__container{
-    max-height: 120px;
-    max-width: 120px;
+	max-height: 120px;
 }
 
 .product-card-image{
-   width: auto;
    height: 100%;
-   flex-grow: 1;
+   width: 100%;
 }
 
 .product-card-content{
@@ -31,11 +35,12 @@
 .product-card-title__container{
     display: flex;
     justify-content: center;
+	min-height: 40px;
 }
 
 .product-card-title__container .product-card-title{
     text-align: center;
-    font-size: 22px;
+    font-size: 17px;
 }
 
 .product-card-content-footer__container{
@@ -50,11 +55,12 @@
 }
 
 .product-card-content-footer__container .product-card-price__container{
-    margin: auto 5px;
+    margin: 0 5px;
 }
 
 .product-card-content-footer__container .product-card-price__container .product-card-price{
     font-size: 15px;
+	margin-top: 10px;
 }
 
 .product-card-btn-container{
@@ -70,7 +76,7 @@
 .product-card-btn-container .counter__container{
     display: flex;
     justify-content: center;
-    padding-top: 0.25rem;
+    padding-top: 0.5rem;
 }
 
 .product-card-btn-container .counter__container .counter {
