--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -9,6 +9,7 @@
 	border-radius: 50%;
 	padding: 5px;
 	background: no-repeat;
+	background-color: #20B2AA;
 	background-position: center;
 	position: relative;
 }
@@ -16,24 +17,20 @@
 .btn.big-add {
 	background-image: url('../../../public/img/cart.png');
 	background-size: 20px;
-	background-color: #00FFFF;
 }
 
 .btn.add {
 	background-image: url('../../../public/img/plus.png');
 	background-size: 20px;
-	background-color: #00FFFF;
 }
 
 .btn.remove{
 	background-image: url('../../../public/img/minus.png');
 	background-size: 20px;
-	background-color: #00FFFF;
 }
 
 .btn.cart{
 	background-image: url('../../../public/img/cart-icon.png');
-	background-color: #00FFFF;
 	border-radius: 25px;
 	width: 55px;
 	background-size: 25px;
