--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,5 +1,5 @@
 body{
 	color: rgb(22, 22, 22);
-	background-color: #AFEEEE;
+	background-color: #F0FFFF;
 	font-family: 'Roboto Condensed', sans-serif;
 }
