--- a/src/components/delivery/delivery.css
+++ b/src/components/delivery/delivery.css
@@ -9,6 +9,41 @@
 	padding-bottom: 5px;
 }
 
+.delivery__tabs>input[type='radio']{
+	display: none;
+}
+
+.delivery__tabs>#content-1,
+.delivery__tabs>#content-2{
+	display: none;
+}
+
+#tab-1:checked~#content-1,
+#tab-2:checked~#content-2{
+	display: block;
+	padding-top: 5px;
+}
+
+.delivery__tabs>label {
+	display: inline-block;
+	text-align: center;
+	user-select: none;
+	background-color: #f5f5f5;
+	border: 1px solid #e0e0e0;
+	border-radius: 5px;
+	padding: 2px 8px;
+	font-size: 16px;
+	line-height: 1.5;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+	cursor: pointer;
+	position: relative;
+	margin-right: 5px;
+}
+
+.delivery__tabs>input[type="radio"]:checked+label {
+	background-color: #fff;
+}
+
 .delivery__content{
 	display: flex;
 	flex-direction: column;
@@ -17,21 +52,25 @@
 }
 
 .form-elem{
-	padding-top: 5px;
+	display: flex;
+	flex-direction: column;
+	padding-top: 10px;
+	height: 2.5rem;
+	border-bottom: 1px solid #cccccc;
 }
 
 .form-elem label{
-	display: inline-block;
-	min-width: 20vw;
+	font-size: 0.8rem;
+	color: #646973;
+	line-height: 1;
 }
 
 .form-elem input{
-	display: inline-block;
-	min-width: 60vw;
-	border: 1px solid #ccc;
-    border-radius: 4px;
+	box-sizing: border-box;
+	width: 100%;
+	border: none;
     font-size: 16px;
-    height: 38px;
+	height: 1.5rem;
     outline: none;
-    padding: 0 10px;
+    padding: 6px 0 0 10px;
 }
