--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -6,7 +6,7 @@
 
 .list-wrapper .list {
 	display: flex;
-	justify-content: center;
 	flex-flow: row wrap;
 	position: relative;
+	padding-left: 2.5vw;
 }
