--- a/src/components/delivery/delivery.css
+++ b/src/components/delivery/delivery.css
@@ -49,7 +49,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 5px;
-	padding-bottom: 500px;
+	padding-bottom: 50vh;
 }
 
 .form-elem{
