--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -2,6 +2,6 @@ body{
 	color: rgb(22, 22, 22);
 	background-color: #F0FFFF;
 	font-family: 'Roboto Condensed', sans-serif;
-	overflow-y: scroll touch;
-	overflow-x: hidden;
+	overflow-y: scroll;
+	overflow-x: visible;
 }
