--- a/src/components/modalSize/modalSize.css
+++ b/src/components/modalSize/modalSize.css
@@ -23,6 +23,8 @@
 .modal__wrapper .modal-header{
 	display: flex;
 	justify-content: flex-end;
+	position: sticky;
+	top: 0;
 }
 
 .modal__wrapper .close {
@@ -51,8 +53,6 @@
 	display: flex;
 	font-size: 20px;
 }
-
-
 
 .modal__wrapper .modal-content .list-wrapper{
 	display: flex;
@@ -111,6 +111,8 @@
 	justify-content:space-between;
 	background-color: #F0FFFF;
 	padding: 5px;
+	position: sticky;
+	bottom: 0;
 }
 
 .modal-footer .btns{
